# tami

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Source/: ChannelHandler.h  Channels2A03.cpp  ChannelsVRC7.cpp  ColorScheme.h  Common.h  Compiler.h  ConfigSound.cpp  DSample.h  DirectSound.cpp  DirectSound.h  DocumentFile.h  FamiTracker.cpp  FamiTracker.h  FamiTrackerDoc.cpp  FamiTrackerDoc.h  FamiTrackerTypes.h  FamiTrackerView.cpp  FamiTrackerView.h  Instrument.cpp  Instrument.h  Instrument2A03.cpp  InstrumentFDS.cpp  InstrumentN163.cpp  InstrumentVRC6.cpp  InstrumentVRC7.cpp  PatternData.h  Settings.cpp  Settings.h  SoundGen.cpp  SoundGen.h  TrackerChannel.h  main.cpp  polyfill.h  stdafx.h
Source/APU/: FDSSound.cpp  FDSSound.h  MMC5.h  Mixer.cpp  Mixer.h  N163.h  S5B.h  VRC6.h  VRC7.h
Source/Blip_Buffer/: Blip_Buffer.cpp  Blip_Buffer.h
src/: array.h  audio.cpp  audio.h  defines.h  document.cpp  document.h  file.cpp  file.h  instrument_container.h  main.cpp  mutex.cpp  mutex.h  object.h  polyfill.h  single_doc_template.cpp  single_doc_template.h  string.cpp  string.h  timer.h  typedefs.h  view.cpp  view.h  winapp.cpp  winapp.h  winthread.cpp  winthread.h
